export default class Tarea{
    public titulo: string =  "Hola";

    
    
}